--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:server": "nodemon server.js"
+    "start:server": "nodemon server.js",
+    "postinstall": "ng build --output-path dist"
   },
   "private": true,
   "dependencies": {
@@ -31,7 +32,10 @@
     "multer": "^1.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "@angular/cli": "~11.2.12",
+    "@angular/compiler-cli": "~11.2.13",
+    "typescript": "~4.1.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.12",
@@ -52,5 +56,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": "v14.16.1",
+    "npm": "6.14.12"
   }
 }
