--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,9 @@
 {
   "name": "mean-course",
   "version": "0.0.0",
+  "main": "server.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "start:server": "nodemon backend/server.js"
+    "start:server": "nodemon server.js"
   },
   "private": true,
   "dependencies": {
@@ -53,5 +48,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": "v14.16.1",
+    "npm": "6.14.12"
   }
 }
